fixed strange overflow css bug

--- a/src/components/worksModal/index.scss
+++ b/src/components/worksModal/index.scss
@@ -5,7 +5,6 @@
   position: fixed;
   display: flex;
   justify-content: space-between;
-  overflow: auto;
   width: 100%;
   height: 100%;
   top: 0;
@@ -90,7 +89,10 @@
 
       &-content {
         max-width: 556px;
-        margin: auto;
+
+        @media screen and (max-width: 1000px) {
+          margin: auto;
+        }
       }
 
       &-header {
